--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- stop 2 -->
       <!-- Load the Blender file -->
 		<a-assets>
-			<a-asset-item id="myModel" src="extrusion.glb"></a-asset-item>
+			<a-asset-item id="myModel" src="Elephant.glb"></a-asset-item>
 		</a-assets>
 		
 		<!-- Display as AR element -->
